# greenhouse-mcp-server

./: .coverage-baseline.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_server.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bdd/: cucumber.cjs  package-lock.json  package.json  tsconfig.json
bdd/steps/: health.steps.ts
bdd/steps/support/: world.ts
docs/decisions/: 0001-python-314-compatibility.md  0002-cross-language-bdd.md  0003-greenhouse-api-patterns.md  0004-fastmcp-dioxide-integration.md  0005-pipeline-bottleneck-definition.md  0006-candidate-data-relationships.md  0007-staleness-thresholds.md  0008-velocity-metrics.md  0009-greenhouse-search-capabilities.md
docs/plans/: 2026-03-18-greenhouse-mcp-design.md
features/: bdd_infrastructure.feature  candidate_dossier.feature  documentation_accuracy.feature  greenhouse_client.feature  hiring_velocity.feature  mcp_server.feature  needs_attention.feature  pipeline_health.feature  project_scaffold.feature  search_talent.feature
recordings/: demo-m2.sh  demo-m3.sh  demo-showpiece.sh  demo.sh  milestone1-narration.md  milestone1_timing.json  milestone2-narration.md  milestone2_timing.json  milestone3-narration.md  milestone3_timing.json  showpiece-narration.md  showpiece_timing.json
recordings/sections/: s1-intro.sh  s1.cast  s2-pipeline.sh  s2.cast  s3-candidate.sh  s3.cast  s4-attention.sh  s4.cast
scripts/: coverage-ratchet.sh  demo.py
src/greenhouse_mcp/: __init__.py  client.py  container.py  dependencies.py  exceptions.py  fake_client.py  models.py  ports.py  server.py
src/greenhouse_mcp/tools/: __init__.py  attention.py  candidate.py  pipeline.py  search.py  velocity.py
tests/: test_attention.py  test_candidate.py  test_client.py  test_container.py  test_dependencies.py  test_exceptions.py  test_fake_client.py  test_models.py  test_pipeline.py  test_placeholder.py  test_search.py  test_server.py  test_velocity.py
