[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenhouse-mcp-server"
version = "0.3.0"
description = "An MCP server providing workflow-oriented access to the Greenhouse recruiting platform's Harvest API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Mike Lane" }]
keywords = ["mcp", "greenhouse", "recruiting", "harvest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastmcp>=3.1",
    "httpx>=0.28",
    "pydantic>=2.12",
    "dioxide>=2.0",
]

[project.urls]
Homepage = "https://github.com/mikelane/greenhouse-mcp-server"
Repository = "https://github.com/mikelane/greenhouse-mcp-server"
Issues = "https://github.com/mikelane/greenhouse-mcp-server/issues"

[project.scripts]
greenhouse-mcp = "greenhouse_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-gremlins>=1.5",
    "pytest-test-categories>=1.2",
    "mypy>=1.19",
    "ruff>=0.15",
]

[tool.coverage.run]
omit = ["src/greenhouse_mcp/ports.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/greenhouse_mcp"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "ERA",   # eradicate
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # perflint
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "ANN",   # flake8-annotations
    "D",     # pydocstyle
    "C90",   # mccabe complexity
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is expected in tests
    "ANN",     # type annotations not required in tests
    "D",       # docstrings not required in tests
    "PLR2004", # magic values in assertions are normal in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Describe*", "When*"]
python_functions = ["it_*", "test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
test_categories_enforcement = "strict"

[tool.pytest-gremlins]
exclude = ["src/greenhouse_mcp/fake_client.py"]
